# omlx

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  pytest.ini  setup.py
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  ci.yml  update-formula.yml
Formula/: omlx.rb
apps/omlx-mac/Resources/: Info.plist  Localizable.xcstrings
apps/omlx-mac/Scripts/: build.sh
apps/omlx-mac/oMLX.xcodeproj/: project.pbxproj
benchmarks/: bonsai_decode_bench.py
docs/: ROUTING.md
omlx/: _torch_stub.py  cli.py  engine_core.py  engine_pool.py  exceptions.py  memory_monitor.py  model_discovery.py  model_profiles.py  model_settings.py  oq.py  process_memory_enforcer.py  scheduler.py  server.py  settings.py  turboquant_kv.py
omlx/adapter/: harmony.py  output_parser.py
omlx/admin/: CLAUDE.md  accuracy_benchmark.py  benchmark.py  external_api.py  hf_downloader.py  idle_sweep.py  oq_manager.py  routes.py  suitability.py  vendor_deps.py
omlx/admin/i18n/: en.json  es.json  fork.es.json  fork.fr.json  fork.ja.json  fork.pt-BR.json  fork.zh-TW.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  zh-TW.json  zh.json
omlx/admin/i18n/fork/: en.json  (+8 more)
omlx/admin/templates/: base.html  chat.html  dashboard.html
omlx/api/: __init__.py  audio_routes.py  embedding_models.py  feedback_routes.py  markitdown.py  openai_models.py  parser_tool_calls.py  rerank_models.py  responses_models.py  thinking.py  tool_calling.py  utils.py
omlx/cache/: paged_cache.py  paged_ssd_cache.py  prefix_cache.py
omlx/custom_kernels/: __init__.py
omlx/custom_kernels/bonsai/: __init__.py  fast.py
omlx/custom_kernels/bonsai/csrc/: CMakeLists.txt  bindings.cpp  bonsai_kernels.cpp  bonsai_kernels.h  bonsai_quantized.metal  quantized.h  spec_decode.metal
omlx/custom_kernels/qwen35_prefill/: fast.py
omlx/engine/: batched.py  dflash.py  stt.py  tts.py  vlm.py
omlx/eval/: __init__.py  base.py  humaneval.py  livecodebench.py  toolcall.py
omlx/eval/data/: toolcall.jsonl
omlx/integrations/: copilot.py  hermes.py  openclaw.py  opencode.py  pi.py
omlx/models/: embedding.py  reranker.py
omlx/patches/: bonsai_qmv.py  bonsai_t5_load.py  dflash_lifecycle.py  m5_gather_qmm.py  mlx_audio_sampling.py  qwen35_moe_gate_up.py  qwen35_moe_weighted_sum.py  qwen35_q4_mlp.py  sdpa256_attention.py  specprefill.py  turboquant_attention.py
omlx/patches/deepseek_v4/: cache_extras.py  deepseek_v4_model.py
omlx/patches/glm_moe_dsa/: __init__.py  deepseek_v32.py  glm_moe_dsa_model.py
omlx/patches/hy_v3/: __init__.py  hy_v3_model.py  hy_v3_opensource_tool_parser.py  hy_v3_tool_parser.py
omlx/patches/laguna/: __init__.py  laguna_model.py  tool_parser.py
omlx/patches/mlx_lm_mtp/: __init__.py  batch_generator.py  glm_moe_dsa_model.py  nemotron_h_chain.py  nemotron_h_model.py  qwen35_model.py
omlx/patches/mlx_vlm_unlimited_ocr_compat/: __init__.py
omlx/routing/: __init__.py  misroute.py  policy.py  prefill_probe.py  profiler.py  profiler_capability.py  service.py  shadow.py  store.py  table.py  target_heal.py
omlx/specprefill/: __init__.py  draft.py  planning.py  policy.py  target.py
omlx/utils/: hardware.py  image.py  launchd.py  model_loading.py  release_check.py  tokenizer.py
packaging/: build.py  release.sh  resign.sh
plugins/omlx-agent/: .mcp.json  README.md
plugins/omlx-agent/.claude-plugin/: plugin.json
scripts/: bench.py  verify_routing.py  verify_table_dispatch.py
tests/: conftest.py  test_accuracy_benchmark.py  test_admin_api_key.py  test_admin_auth.py  test_admin_external_extra_body.py  test_admin_i18n_fork_overlay.py  test_admin_model_settings_template.py  test_admin_profiles_api.py  test_admin_routing_activity.py  test_admin_server_aliases.py  test_admin_ssd_janitor_settings.py  test_admin_suitability_table.py  test_admin_unload_bench_guard.py  test_admin_update_check.py  test_api_utils.py  test_audio_api.py  test_audio_stt.py  test_audio_tts.py  test_baseline_mode.py  test_batched_engine.py  test_bench_external_routes.py  test_benchmark.py  test_benchmark_sse_replay.py  test_bonsai_qmv.py  test_bonsai_t5_load.py  test_custom_kernel_abi_probe.py  test_dflash_engine.py  test_dflash_lifecycle.py  test_disconnect_guard.py  test_embedding.py  test_engine_core.py  test_engine_pool.py  test_engine_preflight.py  test_eval.py  test_eval_exec_watchdog.py  test_external_api.py  test_glm_mtp_patch.py  test_harmony.py  test_hf_downloader.py  test_idle_sweep.py  (+76 more)
tests/integration/: test_e2e_streaming.py  test_laguna_real_model.py  test_routing_anthropic_messages.py  test_server_endpoints.py
tools/: repack_ternary_t5.py
(+84 files in other folders)
